sample/msvc/error/c2800.cpp
// C2800.cpp
// compile with: /c
class C {
   operator:: ();   // C2800
};
